# neurosymbolic-supplychain-agents

./: .gitignore  README.md  docker-compose.yaml  ollama-entrypoint.sh  pyproject.toml
configs/: config.yaml
entrypoints/: data_generator.py  data_loader.py  environment_generator.py  knowledge_graph_manager.py  langgraph_agents.py
migrations/: 00001_init_schema.cypher  00002_add_negotiation_schema.cypher
src/: config.py  entities.py  environment.py  generative_module.py  guardian.py  knowledge_graph.py  main.py  math_kernel.py  perception_module.py  strategist.py  tests.py  workflow.py
src/agent/: neuro_symbolic_agent.py
src/agents/: analyst.py  nodes.py  state.py  strategy.py  workflow.py
src/api/: dependencies.py  main.py
src/api/repositories/: market.py  supplier.py
src/api/routes/: agent.py  market.py  rag.py  supplier.py
src/api/schemas/: agents.py  market.py  rag.py  supplier.py
src/api/services/: market.py  supplier.py
src/arena/: graph.py  seller.py  state.py
src/database/: connector.py  migrate.py  setup.py
src/database/migrations/: 00001_init_schema.py  00002_add_negotiation_schema.py  00003_generate_static_company_and_product_data.py  00004_generate_inventory_and_price_data.py  00005_create_time_chaining.py  00006_add_product_production_cost.py  base.py
src/db/: kg_manager.py
src/domain/: entities.py
src/entities/: factory.py  game_world.py  logger.py  market_state.py  negotiator.py  scml_log.json
src/environment/: generator.py  types.py
src/generator/: factory.py  market.py  math_engine.py  seed_master_data.py
src/guardian/: production_logic.py  schemas.py  solver.py  validator.py
src/knowledge_graph/: analytics.py  db_connector.py  importer.py  ingestor.py  loader.py  manager.py  neo4j_client.py  retriever.py
src/llm/: client.py
src/market/: entities.py  factory_agent.py  market.py  negotiator.py  research_data.json
src/market_simulation/: config.py  entities.py  market.py  simulation.py  strategic_agent.py
src/models/: entities.py
src/modules/: guardian.py  strategy.py
src/orchestrator/: nodes.py  types.py
src/rag/: encoder.py  indexer.py  retriever.py  vector_store.py
src/reasoning/: hcn_model.py  symbolic_guardian.py
src/rl/: callbacks.py  experiment_runner.py  negotiation_env.py  train_agent.py
src/settings/: settings.py
src/utils/: logger.py
tests/: main.py  test_guardian.py
