[project]
name = "neurosymbolic-supplychain-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "vantutran2k1",email = "vantu.tran2k1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "neo4j (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
