[project]
name = "neurosymbolic-supplychain-agents"
version = "0.1.0"
description = ""
authors = [
    { name = "vantutran2k1", email = "vantu.tran2k1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "neo4j (>=6.0.3,<7.0.0)",
    "z3-solver (>=4.15.4.0,<5.0.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain-core (>=1.2.5,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "faker (>=39.0.0,<40.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
